# Rag_Audio

./: README.md
rag_audio/: .gitignore  README.md  dev-requirements.txt  main.py  pyproject.toml  require.txt  requirements.txt
rag_audio/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
rag_audio/.github/workflows/: ci.yml
rag_audio/data/qdrant/: docker-compose.yaml
rag_audio/data/qdrant/qdrant_storage/: raft_state.json
rag_audio/data/qdrant/qdrant_storage/collections/bass/0/: newest_clocks.json
rag_audio/data/qdrant/qdrant_storage/collections/bass/0/segments/06bbff89-41bd-492a-8c63-998de5873e72/: mutable_id_tracker.mappings  mutable_id_tracker.versions
rag_audio/data/qdrant/qdrant_storage/collections/drums/0/: newest_clocks.json
rag_audio/data/qdrant/qdrant_storage/collections/guitar/0/: newest_clocks.json  replica_state.json
rag_audio/data/qdrant/qdrant_storage/collections/other/0/: newest_clocks.json
rag_audio/data/qdrant/qdrant_storage/collections/piano/0/: newest_clocks.json
rag_audio/data/qdrant/qdrant_storage/collections/vocals/0/: newest_clocks.json
rag_audio/rag_audio/: __init__.py  __main__.py  app.py
rag_audio/rag_audio/Embedders/: chunking .py  chunking.py  embeds.py  stem.py  vector_db.py
rag_audio/rag_audio/Ingestion/: ingest.py
rag_audio/rag_audio/core/: agent.py  tools.py
rag_audio/rag_audio/core.py/: tools.py
rag_audio/rag_audio/data_schemas/: Execplan.py  __init__.py  schema_chunks.py  schema_song.py  schema_stem.py
rag_audio/tests/: test_rag_audio.py
(+66 files in other folders)
